--- a/templates/account/details.html
+++ b/templates/account/details.html
@@ -30,13 +30,6 @@
             <h3>{% trans "Recent Orders" context "User profile tab" %}</h3>
           </a>
         </li>
-        {% if user.password %}
-        <li class="nav-item">
-          <a class="nav-link " data-toggle="tab" href="#password" role="tab">
-            <h3>{% trans "Change password" context "User profile tab" %}</h3>
-          </a>
-        </li>
-        {% endif %}
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#addresses" role="tab">
             <h3>{% trans "Addresses book" context "User profile tab" %}</h3>
@@ -109,17 +102,6 @@
           {% endif %}
         </div>
       </div>
-      <div class="tab-pane fade" id="password" role="tabpanel">
-        <div class="row ">
-          <div class="col-md-8 col-lg-6 m-auto account__password">
-            <form action="" method="post">
-              {% csrf_token %}
-              {% bootstrap_form change_password_form %}
-              <input type="submit" class="btn primary narrow" value="{% trans "Change password" context "User profile action" %}">
-            </form>
-          </div>
-        </div>
-      </div>
       <div class="tab-pane fade" id="addresses" role="tabpanel">
         <div class="card-deck-wrapper account__addresses">
           <div class="row card-deck">
@@ -152,6 +134,28 @@
         </div>
       </div>
       <div class="tab-pane fade" id="settings" role="tabpanel">
+        <div class="row ">
+          <div class="col-md-8 col-lg-6 m-auto">
+            <form action="" method="post">
+              <div class="form-group relative">
+                <label for="email_edit">Email</label>
+                <input name="old_password" placeholder="{{ user.email }}" class="form-control" id="email_edit" type="email">
+              </div>
+              <input class="btn primary narrow" value="Change email" type="submit" style="float:right; margin-top:1rem">
+            </form>
+          </div>
+        </div>
+        {% if user.password %}
+        <div class="row ">
+          <div class="col-md-8 col-lg-6 m-auto account__password">
+            <form action="" method="post">
+              {% csrf_token %}
+              {% bootstrap_form change_password_form %}
+              <input type="submit" class="btn primary narrow" value="{% trans "Change password" context "User profile action" %}">
+            </form>
+          </div>
+        </div>
+        {% endif %}
         <div class="row ">
           <div class="d-block mx-auto text-center">
             <form action="{% url 'account:delete' %}" method="post">
