Add decoration elements

--- a/src/components/App/css/index.css
+++ b/src/components/App/css/index.css
@@ -86,6 +86,10 @@ img {
   text-align: center;
 }
 
+.decoration {
+  position: absolute;
+}
+
 .primaryColor { color: var(--primaryColor); }
 .seconadyColor { color: var(--secondaryColor); }
 
