--- a/src/components/PrivacyPolicy/privacypolicy.css
+++ b/src/components/PrivacyPolicy/privacypolicy.css
@@ -1,3 +1,26 @@
 #privacy-policy {
-  border: solid var(--border-width) var(--primaryColor);
+	border: solid var(--border-width) var(--primaryColor);
+	& section{
+		padding: calc(var(--spacer) * 2) calc(var(--spacer) * 7);
+		&.hero {
+			background-image: url('../../images/lock-bg.png');
+			background-size: auto;
+			background-repeat: no-repeat;
+			background-position: 90% 0%;
+			& .plane {
+				width: 50%;
+				padding: calc(var(--spacer) * 11) 0 calc(var(--spacer) * 6) calc(var(--spacer));
+				& .title {
+					margin-bottom: var(--headings-margin-bottom);
+				}
+				& p {
+					font-size: calc(var(--font-size-base) * 1.2);
+					width: 65%;
+				}
+			}
+		}
+		&.general-information {
+			
+		}
+	}
 }
