--- a/src/components/App/css/variables.css
+++ b/src/components/App/css/variables.css
@@ -43,6 +43,10 @@
   --h4-font-size:                calc(var(--font-size-base) * 1.5);
   --h5-font-size:                var(font-size-base);
 
+  --h1-font-weight:              600;
+  --h2-font-weight:              600;
+  --h3-font-weight:              500;
+
   --headings-margin-bottom:      calc(var(--spacer) / 2);
   --headings-font-family:        inherit;
   --headings-font-weight:        500;
