--- a/src/components/App/css/index.css
+++ b/src/components/App/css/index.css
@@ -44,22 +44,26 @@ h2 {
   font-size: var(--h2-font-size);
   text-transform: uppercase;
   line-height: var(--headings-line-height);
+  font-weight: var(--font-weight-normal);
 }
 
 h3 {
   font-size: var(--h3-font-size);
   line-height: var(--headings-line-height);
+  font-weight: var(--font-weight-normal);
 }
 
 h4 {
   font-size: var(--h4-font-size);
   line-height: var(--headings-line-height);
+  font-weight: var(--font-weight-normal);
   text-transform: uppercase;
 }
 
 h5 {
   font-size: var(--h5-font-size);
   line-height: var(--headings-line-height);
+  font-weight: var(--font-weight-normal);
 }
 
 a {
